Fixed: wflow-consoleweb - Fixed CSS issues when in RTL mode. @8.0-SNAPSHOT.
Fixed:
1) UI/Form/List builder > Settings, the text field/area aren't aligned and messed up.
2) The app center logo in adminbar is out of place sometimes.
3) Admin bar buttons are stick to left. (Should stick to right)
3) UI > Inbox > Select list ,the buttons are not in place. (add list, open list icon)
4) UI Builder > list/CRUD element, choose list no working well.
5) Build number not showing in system settings.
6) App Composer > Version table, not aligned and should float to right.
7) Settings > General Settings, label and textfield not aligned.
8) UI/Form/List builder, next/prev button position is wrong.
9) UI builder > Settings > Shortcut/User Menu Shorcut table should have full width.
10) UI builder > Settings > Thumbnail/Background image, property assistant icon is overlapped with choose file icon.

--- a/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
+++ b/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
@@ -724,6 +724,57 @@ td.error .chosen-container, td.error input {
     left: -51px;
     padding: 6px 10px 2px 12px;
 }
+body.rtl .property-editor-container input.image + .file-picker-actions .choosefile {
+    top: -16px;
+    left: -9px;
+}
+body.rtl .image-placeholder{
+    float: right;
+    clear: right;
+    margin-right: 0px;
+}
+body.rtl .property-editor-container input[type=text].image{
+    padding-left: 45px;
+    padding-right: 12px;
+}
+body.rtl .assist_icon{
+    right: unset;
+    padding-left:5px;
+    left:0px;
+}
+body.rtl .builder-link a.openbuilder{
+    left: 50px;
+    right: unset;
+}
+body.rtl .property-type-selectbox a.builderAddNew{
+    left: 4px;
+    right:  unset;
+}
+body.rtl .property-editor-container input:not([type]),
+body.rtl .property-editor-container input[type=text],
+body.rtl .property-editor-container input[type=password],
+body.rtl .property-editor-container input[type=email],
+body.rtl .property-editor-container input[type=url],
+body.rtl .property-editor-container input[type=time],
+body.rtl .property-editor-container input[type=date],
+body.rtl .property-editor-container input[type=datetime],
+body.rtl .property-editor-container input[type=datetime-local],
+body.rtl .property-editor-container input[type=tel],
+body.rtl .property-editor-container input[type=number],
+body.rtl .property-editor-container input[type=search],
+body.rtl .property-editor-container input[type=file],
+body.rtl .property-editor-container .property-input select,
+body.rtl .property-editor-container .property-input textarea{
+    float: right;
+    text-align: right;
+}
+body.rtl .property-input .withPrefix{
+    display: unset !important;
+}
+body.rtl .property-input > span.icon > span > span.dropdown{
+    left: 5px;
+    right: unset !important;
+}
 .image-placeholder {
     background-size: cover;
     margin: 5px 15px 15px 0;
